fixed vertical scaling of white space on index page

--- a/assets/css/header-style.css
+++ b/assets/css/header-style.css
@@ -65,7 +65,7 @@ nav{
   100%  { transform: rotate(360deg) }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 800px) {
     .nav-bar a{
         display: none;
     }
