--- a/assets/css/responsive-nav-style.css
+++ b/assets/css/responsive-nav-style.css
@@ -59,7 +59,7 @@
 
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 800px) {
     
     .nav-button{
         display: inline-block;
@@ -67,7 +67,7 @@
     
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 800px) {
     
     .drop-nav-container{
     display: none;
